# dnd-5e-discord-bot

./: .gitignore  README.md
Main/: .env.example  .gitignore  AUDIT_2026_05_28.md  AUDIT_DATAFLOW_2026_05_29.md  AUDIT_FULL_2026_05.md  AUDIT_IMMERSION_2026_04.md  AUDIT_QUALITY_2026_05_29.md  AUDIT_QUALITY_2026_06_09.md  README.md  REFACTOR_PLAN.md  docker-compose.voice.yml  pyproject.toml  run_eval.bat  run_sonnet_test.bat  run_typecheck.bat  run_voice.py  test_brain_benchmark.py  test_combat.py  test_creativity.py  test_entity_extraction.py  test_eval.py  test_harness.py  test_long_horizon.py  test_long_horizon_claude.py  test_narrator_tools.py  test_phase_c.py  test_state_extraction.py
Main/config/: profiles.yaml
Main/data/: claude_actions.jsonl  claude_responses.jsonl
Main/data/entity_extraction_logs/: entity_extraction_1777173980.json  entity_extraction_1777174148.json
Main/data/phase_c_logs/: phase_c_1777164657.json  phase_c_1777164747.json  phase_c_1777167038.json  phase_c_1777168733.json  phase_c_1777169891.json  phase_c_1777170322.json  phase_c_1777171405.json  phase_c_1777171506.json  phase_c_1777171652.json  phase_c_1777171731.json  phase_c_1777172270.json  phase_c_1777172361.json  phase_c_1777173963.json  phase_c_1777174130.json  phase_c_1777222857.json  phase_c_1777222965.json  phase_c_latest.json
Main/data/state_extraction_logs/: state_extraction_1777173989.json  state_extraction_1777174157.json
Main/dnd_bot/: __init__.py  config.py  main.py
Main/dnd_bot/bot/: __init__.py  client.py
Main/dnd_bot/bot/cogs/: actions.py  admin.py  campaign.py  character.py  combat.py  game.py  immersion.py  inventory.py  rest.py  spells.py
Main/dnd_bot/bot/embeds/: character_sheet.py  combat_embed.py
Main/dnd_bot/bot/frontends/: __init__.py  discord_text.py
Main/dnd_bot/bot/views/: __init__.py  base.py  campaign_lobby.py  character_appearance.py  character_creation.py  character_select.py  combat_actions.py
Main/dnd_bot/data/: __init__.py  database.py  voice_catalog.json
Main/dnd_bot/data/repositories/: __init__.py  campaign_repo.py  character_repo.py  immersion_repo.py  inventory_repo.py  npc_repo.py  session_repo.py  transaction_repo.py
Main/dnd_bot/data/srd/: __init__.py  loader.py
Main/dnd_bot/game/: __init__.py  frontend.py  modes.py  session.py  world_state.py  world_store.py
Main/dnd_bot/game/character/: __init__.py  creation.py  leveling.py  starting_equipment.py
Main/dnd_bot/game/combat/: __init__.py  actions.py  coordinator.py  encounter.py  manager.py  npc_brain.py  turn_loop.py  zones.py
Main/dnd_bot/game/knowledge/: __init__.py  bridge.py  graph.py  matcher.py  models.py  repository.py
Main/dnd_bot/game/magic/: __init__.py  spellcasting.py
Main/dnd_bot/game/mechanics/: __init__.py  conditions.py  dice.py  effects.py  rest.py  validation.py
Main/dnd_bot/game/scene/: __init__.py  registry.py
Main/dnd_bot/immersion/: __init__.py  dialogue_attributor.py  image_comfyui.py  image_coordinator.py  image_factory.py  image_fal.py  image_local.py  image_openai.py  image_prompter.py  prose_parser.py  tts_assembler.py  voice_assigner.py  voice_resolver.py
Main/dnd_bot/llm/: __init__.py  client.py  effects.py  intents.py  json_extract.py  narration.py  narrative_signals.py  narrator_tools.py  orchestrator.py  tool_registry.py  turn_log_reader.py  turn_logger.py
Main/dnd_bot/llm/brains/: __init__.py  adjudicator.py  base.py  narrator.py  rules.py
Main/dnd_bot/llm/extractors/: __init__.py  dedup_judge.py  entity_extractor.py  state_extractor.py
Main/dnd_bot/llm/validators/: nli_validator.py  rule_injector.py
Main/dnd_bot/memory/: __init__.py  blocks.py  manager.py  vector_store.py
Main/dnd_bot/models/: __init__.py  campaign.py  character.py  combat.py  common.py  immersion.py  inventory.py  npc.py
Main/dnd_bot/voice/: __init__.py  api.py  asr.py  asr_browser.py  asr_deepgram.py  asr_factory.py  asr_openai.py  fish_manager.py  frontend.py  tts.py  tts_browser.py  tts_elevenlabs.py  tts_factory.py  tts_fish.py  tts_inworld.py  tts_kokoro.py  tts_openai.py
Main/dnd_bot/voice/transports/: __init__.py  livekit_transport.py
Main/migrations/: 001_initial_schema.sql  002_add_indexes_and_cascades.sql  003_knowledge_graph.sql  004_immersion_features.sql  005_character_immersion_columns.sql
Main/research/: decomposing-orchestrator.md  testing-llm-pipelines.md
Main/tests/: __init__.py  conftest.py  fakes.py  session_fakes.py
Main/tests/integration/: test_character_repo_roundtrip.py  test_inventory_repo_roundtrip.py  test_process_action.py  test_session_repo_snapshot.py  test_session_repo_stale.py  test_update_player_persist.py
Main/tests/unit/: __init__.py  conftest.py  test_combat.py  test_combat_force_advance.py  test_combat_narration.py  test_combat_over.py  test_combat_round.py  test_combat_teardown.py  test_combat_turn_lock.py  test_context_budget.py  test_dedup_judge.py  test_dice.py  test_env_example.py  test_game_modes.py  test_immersion.py  test_json_extract.py  test_knowledge_graph.py  test_llm_client.py  test_memory.py  test_memory_persistence.py  test_narration_strategy.py  test_narrator_tool_tiers.py  test_npc_dedup_pipeline.py  test_npc_identity.py  test_scene_entity_update.py  test_session_lifecycle.py  test_session_recovery.py  test_state_extractor.py  test_tiered_narrator.py  test_tool_registry.py  test_turn_log_reader.py  test_validation.py  test_vector_store.py  test_world_state.py  test_world_state_sync.py  test_world_store_single_writer.py  test_world_store_snapshot.py
Main/tools/: audit_dedup.py  claude_player.py  voice_sampler.py
Main/web/: app.js  index.html  style.css
