[project]
name = "dnd-5e-discord-bot"
version = "0.1.0"
description = "D&D 5e Discord bot with LLM-powered Dungeon Master"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Discord
    "py-cord>=2.6.0",

    # Database
    "aiosqlite>=0.20.0",

    # LLM
    "ollama>=0.4.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Vector store (for campaign memory)
    "chromadb>=0.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dnd_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
