[project]
name = "dnd-5e-discord-bot"
version = "0.1.0"
description = "D&D 5e Discord bot with LLM-powered Dungeon Master"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Discord
    "py-cord>=2.6.0",

    # Database
    "aiosqlite>=0.20.0",

    # LLM (provider SDKs used by llm/client.py)
    "ollama>=0.4.0",
    "groq>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.89.0",  # default 'production' profile narrator
    "google-generativeai>=0.8.6",  # legacy SDK used by GeminiClient (google-genai stays in [eval])

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Vector store (for campaign memory)
    "chromadb>=0.5.0",

    # Knowledge graph (entity relationship tracking)
    "networkx>=3.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
eval = [
    "google-genai>=1.0.0",
]
# Voice stack: ASR/TTS providers + LiveKit transport (dnd_bot/voice/, dnd_bot/immersion/ audio)
voice = [
    "numpy>=1.26.4",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "lameenc>=1.8.2",
    "aiohttp>=3.13.3",
    "requests>=2.32.3",
    "kokoro>=0.9.4",  # default local TTS (pulls torch)
    "elevenlabs>=2.42.0",
    "deepgram-sdk>=6.1.1",
    "nvidia-riva-client>=2.25.1",
    "livekit>=1.1.5",
    "livekit-api>=1.1.0",
    "livekit-agents>=1.5.2",
    "livekit-plugins-nvidia>=1.5.1",
    "livekit-plugins-silero>=1.5.1",
]
# FastAPI server for the web UI / voice API (run_voice.py needs both [voice] and [web])
web = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]
# Scene image generation (default 'fal' provider needs only requests;
# torch/diffusers are for the local Stable Diffusion path — heavy GPU install)
image = [
    "requests>=2.32.3",
    "torch>=2.4.0",
    "diffusers>=0.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dnd_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
