[project]
name = "dnd-5e-discord-bot"
version = "0.1.0"
description = "D&D 5e Discord bot with LLM-powered Dungeon Master"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Discord
    "py-cord>=2.6.0",

    # Database
    "aiosqlite>=0.20.0",

    # LLM (provider SDKs used by llm/client.py)
    "ollama>=0.4.0",
    "groq>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.89.0",  # default 'production' profile narrator
    "google-generativeai>=0.8.6",  # legacy SDK used by GeminiClient (google-genai stays in [eval])

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Vector store (for campaign memory)
    "chromadb>=0.5.0",

    # Knowledge graph (entity relationship tracking)
    "networkx>=3.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",  # yaml stubs; config.py (strict mypy tier) imports yaml
]
eval = [
    "google-genai>=1.0.0",
]
# Voice stack: ASR/TTS providers + LiveKit transport (dnd_bot/voice/, dnd_bot/immersion/ audio)
voice = [
    "numpy>=1.26.4",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "lameenc>=1.8.2",
    "aiohttp>=3.13.3",
    "requests>=2.32.3",
    "kokoro>=0.9.4",  # default local TTS (pulls torch)
    "elevenlabs>=2.42.0",
    "deepgram-sdk>=6.1.1",
    "nvidia-riva-client>=2.25.1",
    "livekit>=1.1.5",
    "livekit-api>=1.1.0",
    "livekit-agents>=1.5.2",
    "livekit-plugins-nvidia>=1.5.1",
    "livekit-plugins-silero>=1.5.1",
]
# FastAPI server for the web UI / voice API (run_voice.py needs both [voice] and [web])
web = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]
# Scene image generation (default 'fal' provider needs only requests;
# torch/diffusers are for the local Stable Diffusion path — heavy GPU install)
image = [
    "requests>=2.32.3",
    "torch>=2.4.0",
    "diffusers>=0.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dnd_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

# Honest tiered mypy config (audit 2026-06-09 punch item 4: was blanket
# strict=true that never ran anywhere and could not pass). Gate command:
# run_typecheck.bat (venv\Scripts\python -m mypy dnd_bot) — must exit 0.
[tool.mypy]
python_version = "3.11"  # project floor (requires-python >=3.11)
plugins = ["pydantic.mypy"]
packages = ["dnd_bot"]
warn_unused_configs = true
warn_redundant_casts = true

# --- STRICT TIER -------------------------------------------------------------
# The typed core. Near-strict (the per-module subset of --strict); keep at
# ZERO errors — run_typecheck.bat fails otherwise.
[[tool.mypy.overrides]]
module = [
    "dnd_bot.models.*",
    "dnd_bot.data.*",
    "dnd_bot.memory.*",
    "dnd_bot.config",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
no_implicit_reexport = true

# pydantic's @computed_field stacks on @property, which mypy cannot model
# (even with the pydantic plugin) — models/character.py ability modifiers.
[[tool.mypy.overrides]]
module = "dnd_bot.models.*"
disable_error_code = ["prop-decorator"]

# --- RELAXED TIER ------------------------------------------------------------
# Explicitly NOT checked yet. Each package needs its own typing pass before
# promotion to the strict tier (or even the default baseline). Reasons:
[[tool.mypy.overrides]]
module = [
    "dnd_bot.bot.*",        # py-cord Option-as-annotation idiom is uncheckable; ~17% annotation coverage (524 baseline errors)
    "dnd_bot.voice.*",      # voice SDKs (riva/livekit/kokoro/...) not installed in dev venv; route handlers unannotated
    "dnd_bot.immersion.*",  # torch/diffusers/scipy paths not installed in dev venv; ~61% coverage
    "dnd_bot.llm.*",        # LLM seams carry loose dict shapes (35 baseline errors); typing lands with the tool-registry/effects refactor
    "dnd_bot.game.*",       # 92 baseline errors (rest.py, world_state.py, coordinator.py); demoted from the audit's hoped-for strict tier
    "dnd_bot.main",         # discord bootstrap, same idioms as bot/*
]
ignore_errors = true

# --- Third-party imports without stubs (targeted, never global) --------------
[[tool.mypy.overrides]]
module = [
    "networkx.*",              # installed, ships no py.typed (types-networkx exists if game/* is ever promoted)
    "torch.*",                 # [image]/[voice] extras — not installed in dev venv
    "kokoro.*",                # [voice] extra
    "elevenlabs.*",            # [voice] extra
    "riva.*",                  # [voice] extra
    "livekit.*",               # [voice] extra
    "fastapi.*",               # [web] extra
]
ignore_missing_imports = true
